Fix : Bug fixes