@@ -8,20 +8,24 @@ import java.util.Locale;
 public class IssueSpecifications {
 
     public static Specification<Issue> hasTitleLike(String title) {
-        return (root, query, cb) -> title == null || title.isBlank() ? null : 
-            cb.like(cb.lower(root.get("title")), "%" + title.toLowerCase(Locale.ROOT) + "%");
+        return (root, query, cb) -> {
+            if (title == null || title.trim().isEmpty()) return null;
+            return cb.like(cb.lower(root.get("title")), "%" + title.trim().toLowerCase(Locale.ROOT) + "%");
+        };
     }
 
     public static Specification<Issue> hasDescriptionLike(String description) {
-        return (root, query, cb) -> description == null || description.isBlank() ? null : 
-            cb.like(cb.lower(root.get("description")), "%" + description.toLowerCase(Locale.ROOT) + "%");
+        return (root, query, cb) -> {
+            if (description == null || description.trim().isEmpty()) return null;
+            return cb.like(cb.lower(root.get("description")), "%" + description.trim().toLowerCase(Locale.ROOT) + "%");
+        };
     }
 
     public static Specification<Issue> hasStatus(String status) {
         return (root, query, cb) -> {
-            if (status == null || status.isBlank()) return null;
+            if (status == null || status.trim().isEmpty()) return null;
             try {
-                Issue.Status s = Issue.Status.valueOf(status.toUpperCase(Locale.ROOT));
+                Issue.Status s = Issue.Status.valueOf(status.trim().toUpperCase(Locale.ROOT));
                 return cb.equal(root.get("status"), s);
             } catch (IllegalArgumentException ex) {
                 return cb.disjunction();
@@ -31,9 +35,9 @@ public class IssueSpecifications {
 
     public static Specification<Issue> hasPriority(String priority) {
         return (root, query, cb) -> {
-            if (priority == null || priority.isBlank()) return null;
+            if (priority == null || priority.trim().isEmpty()) return null;
             try {
-                Issue.Priority p = Issue.Priority.valueOf(priority.toUpperCase(Locale.ROOT));
+                Issue.Priority p = Issue.Priority.valueOf(priority.trim().toUpperCase(Locale.ROOT));
                 return cb.equal(root.get("priority"), p);
             } catch (IllegalArgumentException ex) {
                 return cb.disjunction();
@@ -43,9 +47,9 @@ public class IssueSpecifications {
 
     public static Specification<Issue> hasType(String type) {
         return (root, query, cb) -> {
-            if (type == null || type.isBlank()) return null;
+            if (type == null || type.trim().isEmpty()) return null;
             try {
-                Issue.IssueType t = Issue.IssueType.valueOf(type.toUpperCase(Locale.ROOT));
+                Issue.IssueType t = Issue.IssueType.valueOf(type.trim().toUpperCase(Locale.ROOT));
                 return cb.equal(root.get("type"), t);
             } catch (IllegalArgumentException ex) {
                 return cb.disjunction();
@@ -74,6 +78,24 @@ public class IssueSpecifications {
             if (assetId == null) return null;
             var join = root.join("asset", JoinType.LEFT);
             return cb.equal(join.get("id"), assetId);
+        };
+    }
+
+    public static Specification<Issue> hasGlobalSearch(String searchTerm) {
+        return (root, query, cb) -> {
+            if (searchTerm == null || searchTerm.trim().isEmpty()) return null;
+            String term = "%" + searchTerm.trim().toLowerCase(Locale.ROOT) + "%";
+            var assetJoin = root.join("asset", JoinType.LEFT);
+            var reportedByJoin = root.join("reportedBy", JoinType.LEFT);
+            var assignedToJoin = root.join("assignedTo", JoinType.LEFT);
+            return cb.or(
+                cb.like(cb.lower(root.get("title")), term),
+                cb.like(cb.lower(root.get("description")), term),
+                cb.like(cb.lower(assetJoin.get("name")), term),
+                cb.like(cb.lower(assetJoin.get("assetTag")), term),
+                cb.like(cb.lower(reportedByJoin.get("name")), term),
+                cb.like(cb.lower(assignedToJoin.get("name")), term)
+            );
         };
     }
 }
